fixed UI and ZIP name and video double tap issue

--- a/src/html_page.html
+++ b/src/html_page.html
@@ -407,11 +407,6 @@ a {
 
 }
 
-#prev_dir{
-	background-color: #000;
-	padding: 3px 20px 8px 20px;
-	border-radius: 4px;
-}
 
 ul{
 	list-style-type: none; /* Remove bullets */
@@ -490,7 +485,7 @@ ul{
 	overflow-wrap: anywhere;
 	transform: translateY(100%);
 	opacity: 0;
-	
+
 	transition:
 		opacity 500ms,
 		transform 500ms;
@@ -501,7 +496,7 @@ ul{
 	opacity: 1;
 }
 
-	
+
 .toast-body {
 	max-height: 100px;
 	overflow-y: auto;
@@ -514,8 +509,6 @@ ul{
 
 	border-radius: 4px;
 }
-
-
 
 
 
@@ -550,4 +543,4 @@ dir_tree.scrollLeft = dir_tree.scrollWidth;
 <hr>
 <div id="content_list">
 	<ul id="linkss">
-		<a href="../" id="prev_dir">&#128281; {Prev folder}</a>
+		<!-- CONTENT LIST (NO JS) -->
