update main file, ready to push to main
also patched android detection code

--- a/src/html_script.html
+++ b/src/html_script.html
@@ -628,6 +628,8 @@ for (let i = 0; i < r_li.length; i++) {
 
 	let link = createElement('a');// both icon and title, display:flex
 	link.href = r_;
+	link.title = name;
+
 	link.classList.add('all_link');
 	link.classList.add("disable_selection")
 	let l_icon = createElement("span")
