add admin page h1

--- a/src/html_admin.html
+++ b/src/html_admin.html
@@ -1,4 +1,10 @@
 
+
+<h1 style="text-align: center;">Admin Page</h1>
+<hr>
+
+
+
 <div class='pagination jsonly' onclick="request_reload()">RELOAD SERVER 🧹</div>
 <noscript><a href="/?reload" class='pagination'>RELOAD SERVER 🧹</a><br></noscript>
 <hr>
