--- a/src/html_script.html
+++ b/src/html_script.html
@@ -514,7 +514,7 @@ function showFile(file, index){
 
 </script>
 
-<a href="/?admin" class='pagination'>Admin center</a>
+<a href="./?admin" class='pagination'>Admin center</a>
 
 
 <p>v4 I ❤️ emoji!</p>
