--- a/src/html_page.html
+++ b/src/html_page.html
@@ -248,7 +248,8 @@ a {
 }
 
 .file-remove {
-  padding: 12px 16px;
+  padding: 5px 10px;
+  margin: 0 5px;
   cursor: pointer;
   font-size: 23px;
   color: #fff;
