--- a/src/html_zip_page.html
+++ b/src/html_zip_page.html
@@ -15,6 +15,9 @@ var percentage = document.getElementById("zip-perc")
 function ping(url) {
 	var xhttp = new XMLHttpRequest();
 	xhttp.onreadystatechange = function() {
+		if (dl_now) {
+			return
+		}
 		if (this.readyState == 4 && this.status == 200) {
 			// Typical action to be performed when the document is ready:
 			//document.getElementById("demo").innerHTML = xhttp.responseText;
