fix Upload menu, file info, data download

--- a/src/html_page.html
+++ b/src/html_page.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <!-- test1 -->
 <html lang="en">
+<head>
 <meta charset="{UTF-8}">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<head>
 <link href='https://fonts.googleapis.com/css?family=Open Sans' rel='stylesheet'>
-</head>
 <title>${PY_PAGE_TITLE}</title>
+</head>
 
 <script>
 const public_url = "${PY_PUBLIC_URL}";
@@ -248,8 +248,9 @@ a {
 }
 
 .file-remove {
-  padding: 5px 10px;
+  padding: 5px 7px;
   margin: 0 5px;
+  margin-right: 10px;
   cursor: pointer;
   font-size: 23px;
   color: #fff;
