--- a/src/html_script.html
+++ b/src/html_script.html
@@ -6,8 +6,35 @@
 <br>
 <hr><br>
 
+<noscript>
 
-<form ENCTYPE="multipart/form-data" method="post" id="uploader">
+<form ENCTYPE="multipart/form-data" method="post" action="?upload">
+	<!-- using "?upload" action so that user can go back to the page -->
+	<center>
+		<h1><u>Upload file</u></h1>
+
+
+		<input type="hidden" name="post-type" value="upload">
+		<input type="hidden" name="post-uid" value="12345">
+
+		<span class="upload-pass">Upload PassWord:</span>&nbsp;&nbsp;<input name="password" type="text" label="Password" class="upload-pass-box">
+		<br><br>
+		<!-- <p>Load File:&nbsp;&nbsp;</p><input name="file" type="file" multiple /><br><br> -->
+		<div class="upload-box">
+			<div class="drag-area">
+				<div class="drag-icon">⬆️</div>
+				<header>Select Files To Upload</header>
+				<input type="file" name="file" multiple class="drag-browse" value="Browse File">
+			</div>
+	</div>
+
+</center>
+<center><input id="submit-btn" type="submit" value="&#10174; upload"></center>
+</form>
+</noscript>
+
+
+<form ENCTYPE="multipart/form-data" method="post" id="uploader" class="jsonly">
 
 
 	<center>
@@ -17,15 +44,15 @@
 		<input type="hidden" name="post-type" value="upload">
 		<input type="hidden" name="post-uid" value="12345">
 
-		<span id="upload-pass">Upload PassWord:</span>&nbsp;&nbsp;<input name="password" type="text" label="Password" id="upload-pass-box">
+		<span class="upload-pass">Upload PassWord:</span>&nbsp;&nbsp;<input name="password" type="text" label="Password" class="upload-pass-box">
 		<br><br>
 		<!-- <p>Load File:&nbsp;&nbsp;</p><input name="file" type="file" multiple /><br><br> -->
-		<div id="upload-box">
-			<div class="drag-area">
+		<div class="upload-box">
+			<div id="drag-area" class="drag-area">
 				<div class="drag-icon">⬆️</div>
 				<header>Drag & Drop to Upload File</header>
 				<span>OR</span>
-				<button id="drag-browse">Browse File</button>
+				<button class="drag-browse">Browse File</button>
 				<input type="file" name="file" multiple hidden>
 			</div>
 	</div>
@@ -74,7 +101,7 @@ class ContextMenu {
 			if (data["script"]) {
 				var script = document.createElement("script");
 				script.innerHTML = data["script"];
-				document.body.appendChild(script);	
+				document.body.appendChild(script);
 			}
 		} else {
 			popup_msg.createPopup("Failed", "Server didn't respond<br>response: " + self.status);
@@ -157,7 +184,7 @@ class ContextMenu {
 		copy.classList.add("menu_options")
 		copy.onclick = async function(ev) {
 			popup_msg.close()
-			
+
 			let success = await tools.copy_2(ev, tools.full_path(file))
 			if(success){
 				toaster.toast("Link Copied!")
@@ -190,7 +217,7 @@ class ContextMenu {
 		del_P.innerText = "🔥" + " Delete permanently"
 		del_P.classList.add("menu_options")
 
-		
+
 		del_P.onclick = () => {
 			r_u_sure({y:()=>{
 				that.menu_click('del-p', file);
@@ -360,7 +387,7 @@ for (let i = 0; i < r_li.length; i++) {
 		file_li.appendChild(item)
 	}
 }
-var dir_container = byId("content_list")
+var dir_container = byId("js-content_list")
 dir_container.appendChild(folder_li)
 dir_container.appendChild(file_li)
 
@@ -372,7 +399,7 @@ dir_container.appendChild(file_li)
 <script>
 //selecting all required elements
 const uploader = byId("uploader"),
-uploader_dropArea = document.querySelector(".drag-area"),
+uploader_dropArea = document.querySelector("#drag-area"),
 uploader_dragText = uploader_dropArea.querySelector("header"),
 uploader_button = uploader_dropArea.querySelector("button"),
 uploader_input = uploader_dropArea.querySelector("input");
@@ -384,17 +411,21 @@ function uploader_exist(file) {
 	//check if file is already selected or not
 	for (let i = 0; i < selected_files.files.length; i++) {
 		if (selected_files.files[i].name == file.name) {
-			return true;
+			return i+1; // 0 is false, so we add 1 to make it true
 		}
 	}
 	return false;
 }
 
 function addFiles(files) {
+	var exist = false;
 	for (let i = 0; i < files.length; i++) {
-		if (!uploader_exist(files[i])) { //if file is not already selected
-			selected_files.items.add(files[i]);
+		exist = uploader_exist(files[i])
+
+		if (exist) { //if file already selected, remove that and replace with new one, because, when uploading last file will remain in host server, so we need to replace it with new one
+			selected_files.items.remove(exist-1);
 		}
+		selected_files.items.add(files[i]);
 	}
 	log("selected "+ selected_files.items.length+ " files");
 	uploader_showFiles();
@@ -472,7 +503,7 @@ function fmbytes(B) {
 	MB = (KB ** 2),
 	GB = (KB ** 3),
 	TB = (KB ** 4)
-	
+
 	var unit="byte", val=B;
 
 	if (B>1){
@@ -490,7 +521,7 @@ function fmbytes(B) {
 	if (B/TB>1){
 		val = (B/TB)
 		unit="TB"}
-	
+
 	val = val.toFixed(2)
 
 	return `${val} ${unit}`
@@ -502,7 +533,7 @@ function uploader_showFile(file, index){
 
 	let item = createElement("div");
 	item.className = "upload-file-item";
-	
+
 	item.innerHTML = `
 			<span class="file-name">${filename}</span>
 			<span class="file-size">${size}</span>
@@ -516,7 +547,7 @@ function uploader_showFile(file, index){
 
 byId("uploader").onsubmit = (e) => {
 	e.preventDefault()
-	
+
 	uploader_input.files = selected_files.files // Assign the updates list
 
 
@@ -536,9 +567,9 @@ byId("uploader").onsubmit = (e) => {
 	request.onreadystatechange = () => {
 		if (request.readyState === XMLHttpRequest.DONE) {
 			msg = `${request.status}: ${request.statusText}`
-			if (request.status === 0) msg = 'Connection failed'
-			if (request.status === 204 || request.status === 200) msg = 'Success'
 			if (request.status === 401) msg = 'Incorrect password'
+			else if (request.status === 0) msg = 'Connection failed (Possible cause: Incorrect password)'
+			else if (request.status === 204 || request.status === 200) msg = 'Success'
 			status.innerText = msg
 		}
 	}
