finished with-decorator merge, hope the coding will be easy now

--- a/dev_src/html_script.html
+++ b/dev_src/html_script.html
@@ -237,7 +237,7 @@ class ContextMenu {
 	}
 	create_folder() {
 		let folder_name = byId('folder-name').value;
-		this.menu_click('new folder', folder_name)
+		this.menu_click('new_folder', folder_name)
 	}
 }
 var context_menu = new ContextMenu()
