--- a/dev_src/html_zip_page.html
+++ b/dev_src/html_zip_page.html
@@ -22,14 +22,19 @@ function ping(url) {
 			// Typical action to be performed when the document is ready:
 			//document.getElementById("demo").innerHTML = xhttp.responseText;
 			var resp = xhttp.responseText;
-			if (resp == "SUCCESS") {
+			log(resp)
+			
+			if (resp.startsWith("SUCCESS")) {
 				check_prog = true;
-			} else if (resp == "DONE") {
+			} else if (resp.startsWith("DONE")) {
+				message.innerHTML = "Downloading";
+				percentage.innerText = "";
 				dl_now = true;
 				clearTimeout(prog_timer)
 				run_dl()
 			} else if (resp.startsWith("ERROR")) {
-				message.innerHTML = resp;
+				message.innerHTML = "Error";
+				percentage.innerText = resp;
 				clearTimeout(prog_timer)
 			} else {
 				percentage.innerText = resp + "%";
@@ -41,13 +46,7 @@ function ping(url) {
 }
 
 function run_dl() {
-	var a = document.createElement('a');
-	a.href= window.location.pathname + "?zip&zid=" + id + "&download";
-	a.download = filename;
-	a.style.display = 'none';
-	document.body.appendChild(a);
-	a.click();
-	document.body.removeChild(a);
+	tools.download(window.location.pathname + "?zip&zid=" + id + "&download", filename, new_tab = true)
 }
 var prog_timer = setInterval(function() {
 	ping(window.location.pathname + "?zip&zid=" + id + "&progress")}, 500)
