--- a/dev_src/html_script.html
+++ b/dev_src/html_script.html
@@ -34,7 +34,7 @@
 </noscript>
 
 
-<form ENCTYPE="multipart/form-data" method="post" id="uploader" class="jsonly">
+<form ENCTYPE="multipart/form-data" method="post" id="uploader" class="jsonly" action="?upload">
 
 
 	<center>
