--- a/dev_src/html_zip_page.html
+++ b/dev_src/html_zip_page.html
@@ -23,7 +23,7 @@ function ping(url) {
 			//document.getElementById("demo").innerHTML = xhttp.responseText;
 			var resp = xhttp.responseText;
 			log(resp)
-			
+
 			if (resp.startsWith("SUCCESS")) {
 				check_prog = true;
 			} else if (resp.startsWith("DONE")) {
@@ -53,3 +53,6 @@ var prog_timer = setInterval(function() {
 
 
 </script>
+
+
+<p>pyroBox UI v4 - I ❤️ emoji!</p>
