--- a/dev_src/html_vid.html
+++ b/dev_src/html_vid.html
@@ -1,6 +1,8 @@
 <!-- using from http://plyr.io  -->
 <link rel="stylesheet" href="https://raw.githack.com/RaSan147/py_httpserver_Ult/main/assets/video.css" />
 
+<h2>${PY_UNSUPPORT_WARNING}</h2>
+
 <div id="container">
 	<video controls crossorigin playsinline data-poster="https://i.ibb.co/dLq2FDv/jQZ5DoV.jpg" id="player">
 
@@ -169,6 +171,12 @@ poster.onclick = function(e) {
 </script>
 
 <br>
+<br>
+<a href="${PY_VID_SOURCE}"  download class='pagination'>Download</a>
 
-
+<hr>
 <p>pyroBox UI v4 - I ❤️ emoji!</p>
+
+
+</body>
+</html>
