--- a/dev_src/html_page.html
+++ b/dev_src/html_page.html
@@ -248,12 +248,15 @@ a {
 .file-name, .link_name {
 	display: inline-block;
 	word-wrap: break-all;
+	overflow-wrap: anywhere;
 	width: 70%;
 }
 
 .link_name {
 	width: calc(100% - 57px);
+	
 }
+
 
 .file-remove {
   padding: 5px 7px;
