--- a/dev_src/html_vid.html
+++ b/dev_src/html_vid.html
@@ -1,6 +1,8 @@
 <!-- using from http://plyr.io  -->
 <link rel="stylesheet" href="https://raw.githack.com/RaSan147/py_httpserver_Ult/main/assets/video.css" />
 
+<p><b>Watching:</b> ${PY_FILE_NAME}</p>
+
 <h2>${PY_UNSUPPORT_WARNING}</h2>
 
 <div id="container">
