--- a/dev_src/html_zip_page.html
+++ b/dev_src/html_zip_page.html
@@ -21,23 +21,26 @@ function ping(url) {
 		if (this.readyState == 4 && this.status == 200) {
 			// Typical action to be performed when the document is ready:
 			//document.getElementById("demo").innerHTML = xhttp.responseText;
-			var resp = xhttp.responseText;
-			log(resp)
+			// json of the response
+			var resp = JSON.parse(xhttp.response);
 
-			if (resp.startsWith("SUCCESS")) {
+			if (resp.status=="SUCCESS"){
 				check_prog = true;
-			} else if (resp.startsWith("DONE")) {
+			} else if (resp.status=="DONE"){
 				message.innerHTML = "Downloading";
 				percentage.innerText = "";
 				dl_now = true;
 				clearTimeout(prog_timer)
 				run_dl()
-			} else if (resp.startsWith("ERROR")) {
+			} else if (resp.status=="ERROR"){
 				message.innerHTML = "Error";
-				percentage.innerText = resp;
+				percentage.innerText = resp.message;
 				clearTimeout(prog_timer)
+			} else if (resp.status=="PROGRESS"){
+				percentage.innerText = resp.message + "%";
 			} else {
-				percentage.innerText = resp + "%";
+				percentage.innerText = resp.status + ": " + resp.message;
+				clearTimeout(prog_timer)
 			}
 		}
 	};
